--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                     </div>
                                     <div class="item-v">
                                         <label>Кількість</label>
-                                        <input type="number" class="text-field__input col-md-12" placeholder="0">
+                                        <input type="number" class="text-field__input col-md-12" name="fix-check" placeholder="0">
                                     </div>
                                 </div>
                                 <div class="currency-item">
@@ -224,7 +224,7 @@
                                     </div>
                                     <div class="item-v">
                                         <label>Кількість</label>
-                                        <input type="number" class="text-field__input col-md-12" disabled placeholder="0">
+                                        <input type="number" class="text-field__input col-md-12" name="fix-check" disabled placeholder="0">
                                     </div>
                                 </div>
 
